Home page html skeleton

--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,28 @@
 <html>
 <head>
-<link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
+  <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
 </head>
 <body>
-<p>
-  It works!
-</p>
+  <nav>
+    <a href='#'>Home</a>
+    <a href='#'>About</a>
+    <a href='#'>Mission</a>
+    <a href='#'>Menu</a>
+    <a href='#'>Location</a>
+  </nav>
+  <div class='header'>
+    <h1>Beandust Espresso</h1>
+  </div>
+  <div class='content'>
+    <h2>Mission Statement:</h2>
+    <p>
+      mission here....
+    </p>
+  </div>
+  <div class ='footer'>
+    <p>
+      Copyright 2017
+    </p>
+  </div>
 </body>
 </html>
