--- a/views/location.html
+++ b/views/location.html
@@ -5,6 +5,15 @@
     <title>Beandust Espresso</title>
   </head>
   <body>
+    <div>
+      <nav>
+        <a href='/'>Home</a>
+        <a href='/mission'>Mission</a>
+        <a href='/menu'>Menu</a>
+        <a href='/location'>Location</a>
+        <a href='/about'>About Us</a>
+      </nav>
+    </div>
     401 5th Ave
 
     Hours:
