--- a/views/mission.html
+++ b/views/mission.html
@@ -5,6 +5,15 @@
     <title>Beandust Espresso</title>
   </head>
   <body>
+    <div>
+      <nav>
+        <a href='/'>Home</a>
+        <a href='/mission'>Mission</a>
+        <a href='/menu'>Menu</a>
+        <a href='/location'>Location</a>
+        <a href='/about'>About Us</a>
+      </nav>
+    </div>
     Mission Statement:
 
     Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors. We treat our coffees with precision and care, from export to storage to roasting to cup. We are ambassadors for the farmers of fine quality coffees – dedicated to knowledge and its dissemination, accurate execution, caring communication, detailed service and the highest levels of excellence.
