--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,19 @@
 body {
-  background-color: lime;
+  margin:0 auto;
+  padding:0;
+}
+
+.header {
+  text-align: center;
+}
+
+nav {
+  margin:0 auto;
+  text-align: center;
+  padding: 20px;
+}
+
+
+h2 {
+  text-align: center
 }
