--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <a href='#'>Location</a>
   </nav>
   <div class='header'>
+    <img src='#' alt='#homeimage' />
     <h1>Beandust Espresso</h1>
   </div>
   <div class='content'>
