--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
       <a href='/about'>About Us</a>
     </nav>
     <div class='header'>
-      <img src='#' alt='#homeimage' />
+      <img src='/img/coffee_home.jpg' alt='#homeimage' />
       <h1>Beandust Espresso</h1>
     </div>
     <div class='content'>
