--- a/views/about.html
+++ b/views/about.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Beandust Espresso</title>
+    <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <div>
-      <nav>
-        <a href='/'>Home</a>
-        <a href='/mission'>Mission</a>
-        <a href='/menu'>Menu</a>
-        <a href='/location'>Location</a>
-        <a href='/about'>About Us</a>
-      </nav>
-    </div>
-    Sage Donnelly has a doctorate of the arts from North Kenwood university. She uses her talents to help launch small businesses. Some of her past successes include Microsoft, Standard Oil, The North Atlantic Railroad, and Google.
+    <nav>
+      <a href='/'>Home</a>
+      <a href='/mission'>Mission</a>
+      <a href='/menu'>Menu</a>
+      <a href='/location'>Location</a>
+      <a href='/about'>About Us</a>
+    </nav>
+    <div class='content'>
+      Sage Donnelly has a doctorate of the arts from North Kenwood university. She uses her talents to help launch small businesses. Some of her past successes include Microsoft, Standard Oil, The North Atlantic Railroad, and Google.
 
-    Raymond Grady is a self-sealing stembolt mogul with a passion for amazing coffee. He’s put his vast stem-bolt fortune toward opening Beandust espresso. His dedication knows no bounds.
+      Raymond Grady is a self-sealing stembolt mogul with a passion for amazing coffee. He’s put his vast stem-bolt fortune toward opening Beandust espresso. His dedication knows no bounds.
+    </div>
+    <div class ='footer'>
+      <p>
+        Copyright 2017
+      </p>
+    </div>
   </body>
 </html>
