--- a/views/location.html
+++ b/views/location.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Beandust Espresso</title>
+    <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <div>
       <nav>
-        <a href='/'>Home</a>
-        <a href='/mission'>Mission</a>
-        <a href='/menu'>Menu</a>
-        <a href='/location'>Location</a>
-        <a href='/about'>About Us</a>
-      </nav>
-    </div>
-    401 5th Ave
-    <a href='https://www.google.com/maps/place/401+5th+Ave,+Seattle,+WA+98104/data=!4m2!3m1!1s0x54906aba3f3d6de5:0x1fb437d954dcddd2?sa=X&ved=0ahUKEwibksDugpnVAhUB0GMKHTrPBDQQ8gEIJzAA'><img src='https://www.google.com/maps/vt/data=u7UR9SpBSo-tIoo_hgoSU5I_4U-WU04E5Voiy8cpm58rgDUfL0_NLKHI9HqIFlHxkokXlRLKG5FSpKJ9yisXFHX21P6KIlhj-tt1zmf5q6fzgzKkOdT-Iw7ANKVBMn5J--GncgbKV0X2gvTPemjLTFMgkejvZ-9fcqNPR0VvUSW2jtdXRvpDdlg0kY046bAtrQbROS3O1tugh9GqJCahKs0y6cLtTj0F9h-MbNDv4UaHf_tl6EO5Y5IS8mcfZ09HcTmNX0SE5a0GdpDlX8d_gm5kFdGQB3AGiv86uMZMqQYIQQ' /></a>
+      <a href='/'>Home</a>
+      <a href='/mission'>Mission</a>
+      <a href='/menu'>Menu</a>
+      <a href='/location'>Location</a>
+      <a href='/about'>About Us</a>
+    </nav>
+    <div class='content'>
+      401 5th Ave
+      <a href='https://www.google.com/maps/place/401+5th+Ave,+Seattle,+WA+98104/data=!4m2!3m1!1s0x54906aba3f3d6de5:0x1fb437d954dcddd2?sa=X&ved=0ahUKEwibksDugpnVAhUB0GMKHTrPBDQQ8gEIJzAA'><img src='https://www.google.com/maps/vt/data=u7UR9SpBSo-tIoo_hgoSU5I_4U-WU04E5Voiy8cpm58rgDUfL0_NLKHI9HqIFlHxkokXlRLKG5FSpKJ9yisXFHX21P6KIlhj-tt1zmf5q6fzgzKkOdT-Iw7ANKVBMn5J--GncgbKV0X2gvTPemjLTFMgkejvZ-9fcqNPR0VvUSW2jtdXRvpDdlg0kY046bAtrQbROS3O1tugh9GqJCahKs0y6cLtTj0F9h-MbNDv4UaHf_tl6EO5Y5IS8mcfZ09HcTmNX0SE5a0GdpDlX8d_gm5kFdGQB3AGiv86uMZMqQYIQQ' /></a>
 
-    Hours:
-    Monday 4am-11am
-    All other days 24hrs
+      Hours:
+      Monday 4am-11am
+      All other days 24hrs
+    </div>
+    <div class ='footer'>
+      <p>
+        Copyright 2017
+      </p>
+    </div>
   </body>
 </html>
