--- a/views/menu.html
+++ b/views/menu.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Beandust Espresso</title>
+    <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <div>
-      <nav>
-        <a href='/'>Home</a>
-        <a href='/mission'>Mission</a>
-        <a href='/menu'>Menu</a>
-        <a href='/location'>Location</a>
-        <a href='/about'>About Us</a>
-      </nav>
+    <nav>
+      <a href='/'>Home</a>
+      <a href='/mission'>Mission</a>
+      <a href='/menu'>Menu</a>
+      <a href='/location'>Location</a>
+      <a href='/about'>About Us</a>
+    </nav>
+    <div class='content'>
+      MENU PAGE!
     </div>
-    MENU PAGE!
+    <div class ='footer'>
+      <p>
+        Copyright 2017
+      </p>
+    </div>
   </body>
 </html>
