--- a/views/mission.html
+++ b/views/mission.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Beandust Espresso</title>
+    <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <div>
-      <nav>
-        <a href='/'>Home</a>
-        <a href='/mission'>Mission</a>
-        <a href='/menu'>Menu</a>
-        <a href='/location'>Location</a>
-        <a href='/about'>About Us</a>
-      </nav>
+    <nav>
+      <a href='/'>Home</a>
+      <a href='/mission'>Mission</a>
+      <a href='/menu'>Menu</a>
+      <a href='/location'>Location</a>
+      <a href='/about'>About Us</a>
+    </nav>
+    <div class='content'>
+      Mission Statement:
+
+      Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors. We treat our coffees with precision and care, from export to storage to roasting to cup. We are ambassadors for the farmers of fine quality coffees – dedicated to knowledge and its dissemination, accurate execution, caring communication, detailed service and the highest levels of excellence.
+
+      Quality coffee farmers are our partners. We form relationships with farmers we trust and deeply respect for their consistent dedication to excellence. We benefit from their hard work, attention to detail, and virtuosity – and pay accordingly, independent of the commodity market. As roasters and brewers, we are interpreters of the symphony composed by farmers interacting with nature. We strive to deliver, without overpowering, all the translucent layers of flavor inherent in great coffees.
     </div>
-    Mission Statement:
-
-    Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors. We treat our coffees with precision and care, from export to storage to roasting to cup. We are ambassadors for the farmers of fine quality coffees – dedicated to knowledge and its dissemination, accurate execution, caring communication, detailed service and the highest levels of excellence.
-
-    Quality coffee farmers are our partners. We form relationships with farmers we trust and deeply respect for their consistent dedication to excellence. We benefit from their hard work, attention to detail, and virtuosity – and pay accordingly, independent of the commodity market. As roasters and brewers, we are interpreters of the symphony composed by farmers interacting with nature. We strive to deliver, without overpowering, all the translucent layers of flavor inherent in great coffees.
+    <div class ='footer'>
+      <p>
+        Copyright 2017
+      </p>
+    </div>
   </body>
 </html>
