Style quote on home page

--- a/views/index.html
+++ b/views/index.html
@@ -14,13 +14,17 @@
       <a href='/about'>About Us</a>
     </nav>
     <div class='header'>
-      <img src='/img/coffee_home.jpg' alt='#homeimage' />
+      <div class='crop'>
+        <img src='/img/coffee_home.jpg' alt='#homeimage' />
+      </div>
       <h1>Beandust Espresso</h1>
     </div>
     <div class='content'>
-      <h2>Mission Statement:</h2>
-      <p>
-        mission here....
+      <h2></h2>
+      <p id="home-quote">
+        "Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors...
+
+        ...Quality coffee farmers are our partners. We form a relationships with farmers we trust and deeply respect for their consistent dedication to excellence"
       </p>
     </div>
     <div class ='footer'>
