--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,10 +7,23 @@ body {
   text-align: center;
 }
 
+.header .crop {
+  height:400px;
+  overflow: hidden;
+  width: 100%;
+}
+
 .header img {
-  height:200px;
   width:100%;
-  clip-path: inset(10px, 20px, 30px, 40px);
+  margin-top:-30px;
+  position:relative;
+}
+
+h1 {
+  position: absolute;
+   top: 200px;
+   left: 0;
+   width: 100%;
 }
 
 nav {
@@ -27,6 +40,14 @@ h2 {
 .content {
   margin:0 auto;
   width:80%;
+}
+
+#home-quote {
+  text-align: center;
+  font-size: 25px;
+  line-height: 35px;
+  font-family: Arial,Helvetica Neue, Helvetica, sans-serif;
+
 }
 
 .footer {
