--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,15 +21,24 @@ body {
 
 h1 {
   position: absolute;
-   top: 200px;
-   left: 0;
-   width: 100%;
+  top: 200px;
+  left: 0;
+  width: 100%;
+  font-size: 70px;
+  text-shadow: -2px 2px grey;
 }
 
 nav {
   margin:0 auto;
   text-align: center;
   padding: 20px;
+  text-transform: uppercase;
+
+}
+
+nav a {
+  text-decoration: none;
+  padding: 0 10px;
 }
 
 
@@ -39,7 +48,7 @@ h2 {
 
 .content {
   margin:0 auto;
-  width:80%;
+  width:60%;
 }
 
 #home-quote {
@@ -48,6 +57,16 @@ h2 {
   line-height: 35px;
   font-family: Arial,Helvetica Neue, Helvetica, sans-serif;
 
+}
+
+#home-quote a {
+  text-align: center;
+  float:none;
+  text-decoration: none;
+}
+
+.content a {
+    float:left;
 }
 
 .footer {
