--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,10 @@
     <div class='content'>
       <h2></h2>
       <p id="home-quote">
-        "Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors...
+        "Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors...<br /><br />
 
-        ...Quality coffee farmers are our partners. We form a relationships with farmers we trust and deeply respect for their consistent dedication to excellence"
+        ...Quality coffee farmers are our partners. We form a relationships with farmers we trust and deeply respect for their consistent dedication to excellence"<br /><br />
+        <a href='/mission'>Learn More...</a>
       </p>
     </div>
     <div class ='footer'>
