Add nav bar and picture to every webpage

--- a/views/menu.html
+++ b/views/menu.html
@@ -13,8 +13,14 @@
       <a href='/location'>Location</a>
       <a href='/about'>About Us</a>
     </nav>
+    <div class='header'>
+      <div class='crop'>
+        <img src='/img/coffee_home.jpg' alt='#homeimage' />
+      </div>
+      <h1>Beandust Espresso</h1>
+    </div>
     <div class='content'>
-      MENU PAGE!
+        <h2>Menu:</h2>
     </div>
     <div class ='footer'>
       <p>
