--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,3 +80,19 @@ h2 {
   width:100%;
 
 }
+
+#location-text {
+  display:inline;
+  float:left;
+  margin-right: 10px;
+
+
+}
+
+#map {
+   margin: 0 180px;
+   width: 50%;
+   height: 300px;
+   background-color: grey;
+
+ }
