--- a/views/location.html
+++ b/views/location.html
@@ -21,11 +21,29 @@
     </div>
     <div class='content'>
       <h2>Location:</h2>
-      <a href='https://www.google.com/maps/place/401+5th+Ave,+Seattle,+WA+98104/data=!4m2!3m1!1s0x54906aba3f3d6de5:0x1fb437d954dcddd2?sa=X&ved=0ahUKEwibksDugpnVAhUB0GMKHTrPBDQQ8gEIJzAA'><img src='https://www.google.com/maps/vt/data=u7UR9SpBSo-tIoo_hgoSU5I_4U-WU04E5Voiy8cpm58rgDUfL0_NLKHI9HqIFlHxkokXlRLKG5FSpKJ9yisXFHX21P6KIlhj-tt1zmf5q6fzgzKkOdT-Iw7ANKVBMn5J--GncgbKV0X2gvTPemjLTFMgkejvZ-9fcqNPR0VvUSW2jtdXRvpDdlg0kY046bAtrQbROS3O1tugh9GqJCahKs0y6cLtTj0F9h-MbNDv4UaHf_tl6EO5Y5IS8mcfZ09HcTmNX0SE5a0GdpDlX8d_gm5kFdGQB3AGiv86uMZMqQYIQQ' /></a>
-      401 5th Ave
-      Hours:
-      Monday 4am-11am
-      All other days 24hrs
+      <p id='location-text'>
+        401 5th Ave<br />
+        <u>Hours:</u><br />
+        Monday 4am-11am<br />
+        All other days 24hrs
+      </p>
+      <div id='map'></div>
+        <script>
+          function initMap() {
+          var beanDustEspresso = {lat: 47.622943, lng: -122.348843};
+          var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 15,
+            center: beanDustEspresso
+          });
+          var marker = new google.maps.Marker({
+            position: beanDustEspresso,
+            map: map
+          });
+        }
+      </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMxDx8Q_U2VFyq-K9BminAcauR_EpH6xc&callback=initMap">
+      </script>
+
     </div>
     <div class ='footer'>
       <p>
