--- a/views/location.html
+++ b/views/location.html
@@ -14,11 +14,17 @@
       <a href='/about'>About Us</a>
     </nav>
     <div class='content'>
-      <a href='https://www.google.com/maps/place/401+5th+Ave,+Seattle,+WA+98104/data=!4m2!3m1!1s0x54906aba3f3d6de5:0x1fb437d954dcddd2?sa=X&ved=0ahUKEwibksDugpnVAhUB0GMKHTrPBDQQ8gEIJzAA'><img src='https://www.google.com/maps/vt/data=u7UR9SpBSo-tIoo_hgoSU5I_4U-WU04E5Voiy8cpm58rgDUfL0_NLKHI9HqIFlHxkokXlRLKG5FSpKJ9yisXFHX21P6KIlhj-tt1zmf5q6fzgzKkOdT-Iw7ANKVBMn5J--GncgbKV0X2gvTPemjLTFMgkejvZ-9fcqNPR0VvUSW2jtdXRvpDdlg0kY046bAtrQbROS3O1tugh9GqJCahKs0y6cLtTj0F9h-MbNDv4UaHf_tl6EO5Y5IS8mcfZ09HcTmNX0SE5a0GdpDlX8d_gm5kFdGQB3AGiv86uMZMqQYIQQ' /></a>
-      401 5th Ave
-      Hours:
-      Monday 4am-11am
+
+    <div class="address">
+      <h3>Visit Us!</h3>
+      401 5th Ave<br />
+      Seattle, WA 98104<br /><br />
+
+      <strong>Hours</strong>
+      Monday 4am-11am<br />
       All other days 24hrs
+    </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2690.2162788903747!2d-122.33076378446395!3d47.602484079184386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906aba3f3d6de5%3A0x1fb437d954dcddd2!2s401+5th+Ave%2C+Seattle%2C+WA+98104!5e0!3m2!1sen!2sus!4v1500609608397" width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class ='footer'>
       <p>
