Add additional images for homepage

--- a/views/about.html
+++ b/views/about.html
@@ -15,15 +15,15 @@
     </nav>
     <div class='header'>
       <div class='crop'>
-        <img src='/img/coffee_home.jpg' alt='#homeimage' />
+        <img src='/img/coffee1.jpg' alt='#aboutimage' />
       </div>
       <h1>Beandust Espresso</h1>
     </div>
     <div class='content'>
       <h2>About Us:</h2>
-      Sage Donnelly has a doctorate of the arts from North Kenwood university. She uses her talents to help launch small businesses. Some of her past successes include Microsoft, Standard Oil, The North Atlantic Railroad, and Google.
+      <p>Sage Donnelly has a doctorate of the arts from North Kenwood university. She uses her talents to help launch small businesses. Some of her past successes include Microsoft, Standard Oil, The North Atlantic Railroad, and Google.</p>
 
-      Raymond Grady is a self-sealing stembolt mogul with a passion for amazing coffee. He’s put his vast stem-bolt fortune toward opening Beandust espresso. His dedication knows no bounds.
+      <p>Raymond Grady is a self-sealing stembolt mogul with a passion for amazing coffee. He’s put his vast stem-bolt fortune toward opening Beandust espresso. His dedication knows no bounds.</p>
     </div>
     <div class ='footer'>
       <p>
