--- a/views/menu.html
+++ b/views/menu.html
@@ -15,7 +15,7 @@
     </nav>
     <div class='header'>
       <div class='crop'>
-        <img src='/img/coffee_home.jpg' alt='#homeimage' />
+        <img src='/img/coffee3.jpg' alt='#menuimage' />
       </div>
       <h1>Beandust Espresso</h1>
     </div>
