--- a/views/index.html
+++ b/views/index.html
@@ -3,31 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>Beandust Espresso</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <nav>
-      <a href='/'>Home</a>
-      <a href='/mission'>Mission</a>
-      <a href='/menu'>Menu</a>
-      <a href='/location'>Location</a>
-      <a href='/about'>About Us</a>
+    <!-- <img class='logo' src='/img/Logo.png' alt='#logoimage' /> -->
+    <nav class='navbar-fixed-top navbar navbar-inverse'>
+      <a class='btn btn-primary btn-lg' role='button' href='/'>Home</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/mission'>Mission</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
     </nav>
-    <div class='header'>
-      <div class='crop'>
-        <img src='/img/coffee_home.jpg' alt='#homeimage' />
+      <div class='header'>
+        <div class='crop'>
+          <img src='/img/coffee_home.jpg' alt='#homeimage' />
+        </div>
+        <h1>Beandust Espresso</h1>
       </div>
-      <h1>Beandust Espresso</h1>
-    </div>
-    <div class='content'>
-      <h2></h2>
-      <p id="home-quote">
-        "Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors...<br /><br />
+      <div class='content'>
+        <h2></h2>
+        <p id="home-quote">
+          "Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors...<br /><br />
 
-        ...Quality coffee farmers are our partners. We form a relationships with farmers we trust and deeply respect for their consistent dedication to excellence"<br /><br />
-        <a href='/mission'>Learn More...</a>
-      </p>
-    </div>
+          ...Quality coffee farmers are our partners. We form a relationships with farmers we trust and deeply respect for their consistent dedication to excellence"<br /><br />
+          <a href='/mission'>Learn More...</a>
+        </p>
+      </div>
     <div class ='footer'>
       <p>
         Copyright 2017
