--- a/views/mission.html
+++ b/views/mission.html
@@ -3,16 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Beandust Espresso</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <nav>
-      <a href='/'>Home</a>
-      <a href='/mission'>Mission</a>
-      <a href='/menu'>Menu</a>
-      <a href='/location'>Location</a>
-      <a href='/about'>About Us</a>
+    <nav class='navbar-fixed-top navbar navbar-inverse'>
+      <a class='btn btn-primary btn-lg' role='button' href='/'>Home</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/mission'>Mission</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
     </nav>
+      <!-- <img src='/img/Logo.png' alt='#logoimage' /> -->
     <div class='header'>
       <div class='crop'>
         <img src='/img/coffee4.jpg' alt='#homeimage' />
@@ -21,7 +30,7 @@
     </div>
     <h2> Mission Statement:</h2>
     <div class='content'>
-      <p>
+      <p id='mission-content'>
       Our customers come first. We want our customers to take part in the adventure as we explore the rainbow of coffee flavors. We treat our coffees with precision and care, from export to storage to roasting to cup. We are ambassadors for the farmers of fine quality coffees – dedicated to knowledge and its dissemination, accurate execution, caring communication, detailed service and the highest levels of excellence.<br /><br />
 
       Quality coffee farmers are our partners. We form relationships with farmers we trust and deeply respect for their consistent dedication to excellence. We benefit from their hard work, attention to detail, and virtuosity – and pay accordingly, independent of the commodity market. As roasters and brewers, we are interpreters of the symphony composed by farmers interacting with nature. We strive to deliver, without overpowering, all the translucent layers of flavor inherent in great coffees.
