--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,11 @@
     <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
   </head>
   <body>
-    <!-- <img class='logo' src='/img/Logo.png' alt='#logoimage' /> -->
+    <div class='brand brand-name navbar-left pull-left'>
+
+    </div>
     <nav class='navbar-fixed-top navbar navbar-inverse'>
+      <a href='#' class='navbar-left'><img id='beandust-logo' src='/img/Logo.png' alt='#logoimage' /></a>
       <a class='btn btn-primary btn-lg' role='button' href='/'>Home</a>
       <a class='btn btn-primary btn-lg' role='button' href='/mission'>Mission</a>
       <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
