--- a/views/menu.html
+++ b/views/menu.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <nav class='navbar-fixed-top navbar navbar-inverse'>
+      <a href='#' class='navbar-left'><img id='beandust-logo' src='/img/Logo.png' alt='#logoimage' /></a>
       <a class='btn btn-primary btn-lg' role='button' href='/'>Home</a>
       <a class='btn btn-primary btn-lg' role='button' href='/mission'>Mission</a>
       <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
       <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
       <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
     </nav>
-    <!-- <img src='/img/Logo.png' alt='#logoimage' /> -->
     <div class='header container'>
       <div class='crop'>
         <img src='/img/coffee3.jpg' alt='#menuimage' />
