--- a/views/mission.html
+++ b/views/mission.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <nav class='navbar-fixed-top navbar navbar-inverse'>
+      <a href='#' class='navbar-left'><img id='beandust-logo' src='/img/Logo.png' alt='#logoimage' /></a>
       <a class='btn btn-primary btn-lg' role='button' href='/'>Home</a>
       <a class='btn btn-primary btn-lg' role='button' href='/mission'>Mission</a>
       <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
       <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
       <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
     </nav>
-      <!-- <img src='/img/Logo.png' alt='#logoimage' /> -->
     <div class='header'>
       <div class='crop'>
         <img src='/img/coffee4.jpg' alt='#homeimage' />
