--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
       <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
       <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
       <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
+      <a class='btn btn-primary btn-success btn-lg' role='button' href='/products/index'>Order</a>
     </nav>
       <div class='header'>
         <div class='crop'>
