--- a/views/mission.html
+++ b/views/mission.html
@@ -21,6 +21,7 @@
       <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
       <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
       <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
+      <a class='btn btn-primary btn-success btn-lg' role='button' href='/'>Order</a>
     </nav>
     <div class='header'>
       <div class='crop'>
