--- a/views/menu.html
+++ b/views/menu.html
@@ -20,6 +20,7 @@
       <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
       <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
       <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
+      <a class='btn btn-primary btn-success btn-lg' role='button' href='/products/index'>Order</a>
     </nav>
     <div class='header container'>
       <div class='crop'>
