Delete footer and add pastries to menu page

--- a/views/menu.html
+++ b/views/menu.html
@@ -30,8 +30,9 @@
     </div>
     <div class='content'>
       <h2><u>Menu</u></h2>
-        <div class='.table-responsive'>
-          <table class='.table'>
+      <div class='row'>
+        <div class='table-responsive'>
+          <table class='table'>
             <tr>
               <th>Drink</th>
               <th>12oz</th>
@@ -97,7 +98,41 @@
               <td>3.50</td>
               <td>4.00</td>
             </tr>
-          </table>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>Pastries</th>
+              <th>Price</th>
+              <th>W/extras</th>
+            </tr>
+            <tr>
+              <td>Croissant</td>
+              <td>2.99</td>
+              <td>3.99</td>
+            </tr>
+            <tr>
+              <td>Bagel</td>
+              <td>2.49</td>
+              <td>3.49</td>
+            </tr>
+            <tr>
+              <td>Danish</td>
+              <td>2.99</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Muffin</td>
+              <td>4.50</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Cinnamon Roll</td>
+              <td>5.00</td>
+              <td></td>
+            </tr>
         </div>
     </div>
     <div class ='footer'>
