--- a/views/products/index.html
+++ b/views/products/index.html
@@ -34,8 +34,8 @@
       </div>
       <div class='content'>
         <h2>Product List:</h2>
-          <div class='.table-responsive'>
-            <table class='.table'>
+          <div class='table-responsive' id="bean-order">
+            <table class='table'>
               <tr>
                 <th>Product</th>
                 <th>Price</th>
