--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ h1 {
   width: 100%;
   font-size: 70px;
   text-shadow: -2px 2px grey;
-  
+
 }
 
 #beandust-logo {
@@ -89,12 +89,15 @@ iframe {
 .footer {
   text-align: center;
   padding:20px;
+  margin-top:5000px;
   color:#fff;
   background-color: #000;
   position:fixed;
+  display:none;
   left:0px;
-  bottom: 0px;
+  bottom: 0;
   width:100%;
+  height:2px;
 }
 
 #location-text {
@@ -112,11 +115,13 @@ iframe {
    float: right
  }
 
-table {
-  margin: 20px auto;
-}
+ table {
+   margin-bottom:10px;
+ }
 
  th {
+   background-color: green;
+   color:white;
    font-size: 120%;
    padding-right: 4em;
  }
