--- a/views/test.html
+++ b/views/test.html
@@ -1,8 +1,12 @@
 <form action="/orders" method="Post">
-  <input type="hidden" name="user_id" value="1" />
+  <input type="hidden" name="user_id" value="" />
+  <label>T-Shirt</label>
   <input type="hidden" name="item" value="T-Shirt" />
-  <input type="hidden" name="quantity" value="5" />
+  <label>Quantity</label>
+  <input type="text" name="quantity" />
+  <label>Description</label>
   <input type="hidden" name="description" value="The best t-shirt you have ever seen" />
+  <label>Price: $9.99</label>
   <input type="hidden" name="price" value="9.99" />
-  <input type="submit" />
+  <input type="submit" value="Reserve" />
 </form>
