Add new order stub page content

--- a/views/orders/new.html
+++ b/views/orders/new.html
@@ -33,30 +33,11 @@
         <h1>Beandust Espresso</h1>
       </div>
       <div class='content'>
-        <h2>Product List:</h2>
-          <div class='table-responsive' id="bean-order">
-            <table class='table'>
-              <tr>
-                <th>Product</th>
-                <th>Price</th>
-                <th>Quantity</th>
-              </tr>
-              <tr>
-                <td>1 lb. Nicaraguan Coffee Bag, Fair-trade</td>
-                <td>$12.00</td>
-                <td>Quantity</td>
-                <td><a href='/orders/new'>Order</a></td>
-                <td><a href='/orders/show'>Reserve</a></td>
-              </tr>
-              <tr>
-                <td> Cool beans t-shirt</td>
-                <td>$18.00</td>
-                <td>Quantity</td>
-                <td><a href='/orders/new'>Order</a></td>
-                <td><a href='/orders/show'>Reserve</a></td>
-              </tr>
-            </table>
-          </div>
+        <h2>Order Details:</h2>
+            <h3> Customer info: </h3>
+            <h3> Total: </h3>
+            <h3> Payment info: </h3>
+            <a class='btn btn-primary btn-success btn-lg' role='button' href='/orders/show'>Submit</a>
       </div>
 
         </p>
