--- a/views/products/index.html
+++ b/views/products/index.html
@@ -42,18 +42,38 @@
                 <th>Quantity</th>
               </tr>
               <tr>
-                <td>1 lb. Nicaraguan Coffee Bag, Fair-trade</td>
-                <td>$12.00</td>
-                <td>Quantity</td>
-                <td><a href='#'>Order</a></td>
-                <td><a href='#'>Reserve</a></td>
+                <form action="/products" method="Post">
+                  <input type="hidden" name="user_id" value="" />
+                  <td>1 lb. Nicaraguan Coffee Bag, Fair-trade</td>
+                  <input type="hidden" name="item" value="T-Shirt" />
+                  <label>Description</label>
+                  <input type="hidden" name="description" value="A pound of the best coffee ever" />
+                  <td>$12.00</td>
+                  <input type="hidden" name="price" value="12.00" />
+                  <td>
+                    <input type="text" name="quantity" />
+                  </td>
+                  <td>
+                    <input type="submit" value="Reserve" />
+                  </td>
+                </form>
               </tr>
               <tr>
-                <td> Cool beans t-shirt</td>
-                <td>$18.00</td>
-                <td>Quantity</td>
-                <td><a href='#'>Order</a></td>
-                <td><a href='#'>Reserve</a></td>
+                <form action="/products" method="Post">
+                  <input type="hidden" name="user_id" value="" />
+                  <td>Cool beans t-shirt</td>
+                  <input type="hidden" name="item" value="T-Shirt" />
+                  <label>Description</label>
+                  <input type="hidden" name="description" value="The coolest t-shirt ever" />
+                  <td>$18.00</td>
+                  <input type="hidden" name="price" value="18.00" />
+                  <td>
+                    <input type="text" name="quantity" />
+                  </td>
+                  <td>
+                    <input type="submit" value="Reserve" />
+                  </td>
+                </form>
               </tr>
             </table>
           </div>
