--- a/views/orders/new.html
+++ b/views/orders/new.html
@@ -33,13 +33,13 @@
         <h1>Beandust Espresso</h1>
       </div>
       <div class='content'>
-        <h2>Order Details:</h2>
-            <h3> Customer info: </h3>
+        <h2>Place Your Order:</h2>
+            <h3> Customer Info: </h3>
+            <h3> Order Details: </h3>
             <h3> Total: </h3>
-            <h3> Payment info: </h3>
+            <h3> Payment Info: </h3>
             <a class='btn btn-primary btn-success btn-lg' role='button' href='/orders/show'>Submit</a>
       </div>
-
         </p>
       </div>
     <div class ='footer'>
