--- a/views/orders/show.html
+++ b/views/orders/show.html
@@ -1,1 +1,47 @@
-<h1> confirmation stuff!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Beandust Espresso</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link href="/stylesheets/style.css" rel = "stylesheet" type="text/css">
+  </head>
+  <body>
+    <div class='brand brand-name navbar-left pull-left'>
+
+    </div>
+    <nav class='navbar-fixed-top navbar navbar-inverse'>
+      <a href='#' class='navbar-left'><img id='beandust-logo' src='/img/Logo.png' alt='#logoimage' /></a>
+      <a class='btn btn-primary btn-lg' role='button' href='/'>Home</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/mission'>Mission</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/menu'>Menu</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/location'>Location</a>
+      <a class='btn btn-primary btn-lg' role='button' href='/about'>About Us</a>
+      <a class='btn btn-primary btn-success btn-lg' role='button' href='/products/index'>Order</a>
+    </nav>
+      <div class='header'>
+        <div class='crop'>
+          <img src='/img/coffee_home.jpg' alt='#homeimage' />
+        </div>
+        <h1>Beandust Espresso</h1>
+      </div>
+      <div class='content'>
+        <h2>Thank you for your Order!!!</h2>
+            <h3> Confirmation Number: </h3>
+      </div>
+        </p>
+      </div>
+    <div class ='footer'>
+      <p>
+        Copyright 2017
+      </p>
+    </div>
+  </body>
+</html>
