Make both forms work

--- a/views/products/index.html
+++ b/views/products/index.html
@@ -43,9 +43,9 @@
               </tr>
               <tr>
                 <form action="/products" method="Post">
-                  <input type="hidden" name="user_id" value="" />
+                  <input type="hidden" name="user_id" value="1" />
                   <td>1 lb. Nicaraguan Coffee Bag, Fair-trade</td>
-                  <input type="hidden" name="item" value="T-Shirt" />
+                  <input type="hidden" name="item" value="Coffee Bag" />
                   <label>Description</label>
                   <input type="hidden" name="description" value="A pound of the best coffee ever" />
                   <td>$12.00</td>
@@ -60,7 +60,7 @@
               </tr>
               <tr>
                 <form action="/products" method="Post">
-                  <input type="hidden" name="user_id" value="" />
+                  <input type="hidden" name="user_id" value="2" />
                   <td>Cool beans t-shirt</td>
                   <input type="hidden" name="item" value="T-Shirt" />
                   <label>Description</label>
